# SystemCore

./: .gitignore  CONTRIBUTING.md  Log.cpp  Log_cp.cpp  Pipe.h  ProcConf.h  ProcConfInt.h  Processing.cpp  Processing.h  README.md  SECURITY.md  SystemCommanding.cpp  SystemDebugging.cpp  SystemDebugging.h  TcpListening.cpp  TcpListening.h  TcpListening.md  TcpTransfering.cpp
.github/: FUNDING.yml
.github/workflows/: cross.yml  freebsd.yml  linux.yml  macos.yml  windows.yml
targets/stm32/: SingleWireTransfering.h  SystemDebugging.cpp  SystemDebugging.h
tools/: lines.sh
tools/hello-world/: CMakeLists.txt  ChildExecuting.cpp  ChildExecuting.h  Introducing.cpp  Introducing.h  README.md  main.cpp  meson.build
